--- a/src/layouts.module.css
+++ b/src/layouts.module.css
@@ -1,11 +1,12 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: 2fr 7fr 1fr;
+  grid-template-rows: 2fr 10fr 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   grid-template-areas: 'header header header' 'left main right' 'footer footer footer';
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  min-height: 100vh;
 }
 
 .header {
@@ -19,6 +20,7 @@
 
 .left {
   grid-area: left;
+  background-color: black;
 }
 
 .main {
@@ -32,6 +34,7 @@
   align-items: center;
   justify-content: space-around;
   display: flex;
+  background-color: palevioletred;
 }
 
 .footer {
