:rocket: v4: big code structure change (detail) Added minor characters - lots of work (detail) Put all character info in an array of info objects and abstract component logic outside of the main app, hence increasing maintainability and readability

--- a/src/layouts.module.scss
+++ b/src/layouts.module.scss
@@ -7,6 +7,7 @@
   grid-template-areas: 'header header header' 'left main right' 'footer footer footer';
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   min-height: 100vh;
+  max-height: 100vh;
 }
 
 .header {
@@ -21,6 +22,7 @@
 .left {
   grid-area: left;
   background-color: black;
+  overflow: auto;
 }
 
 .main {
@@ -69,4 +71,73 @@
 .night {
   color: white;
   background-color: black;
+}
+
+.rainbow {
+  color: wheat;
+  position: relative;
+}
+
+.rainbow span::before,
+.rainbow span::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  animation: animate 0.7s infinite alternate linear;
+  filter: opacity(0);
+  z-index: var(--n);
+  height: calc(100% - 10% * var(--n));
+  animation-delay: calc(0.8s - 0.1s * var(--n));
+}
+
+.rainbow span:nth-child(1)::before {
+  color: orchid;
+  --n: 1;
+}
+
+.rainbow span:nth-child(1)::after {
+  color: mediumpurple;
+  --n: 2;
+}
+
+.rainbow span:nth-child(2)::before {
+  color: deepskyblue;
+  --n: 3;
+}
+
+.rainbow span:nth-child(2)::after {
+  color: cyan;
+  --n: 4;
+}
+
+.rainbow span:nth-child(3)::before {
+  color: mediumspringgreen;
+  --n: 5;
+}
+
+.rainbow span:nth-child(3)::after {
+  color: yellow;
+  --n: 6;
+}
+
+.rainbow span:nth-child(4)::before {
+  color: gold;
+  --n: 7;
+}
+
+.rainbow span:nth-child(4)::after {
+  color: tomato;
+  --n: 8;
+}
+
+@keyframes animate {
+  from {
+    filter: opacity(0);
+  }
+
+  to {
+    filter: opacity(1);
+  }
 }
